# Slicer4-EMSegment

./: CMakeLists.txt  vtkEMSegment.h  vtkEMSegmentLogic.cxx  vtkEMSegmentLogic.h  vtkEMSegmentMRMLManager.cxx  vtkEMSegmentMRMLManager.h  vtkSlicerCommonInterface.cxx  vtkSlicerCommonInterface.h
AMF/: vtkImageFastSignedChamfer.cxx  vtkImageFastSignedChamfer.h  vtkImageIsoContourDist.cxx  vtkImageIsoContourDist.h  vtkImageLevelSets.cxx  vtkImageLevelSets.h  vtkImageLogOdds.cxx  vtkImageLogOdds.h  vtkImageMultiLevelSets.cxx  vtkImageMultiLevelSets.h  vtkImagePropagateDist.cxx  vtkImagePropagateDist.h  vtkImagePropagateDist2.cxx  vtkImagePropagateDist2.h  vtkLevelSetFastMarching.cxx  vtkLevelSetFastMarching.h  vtkLevelSets.cxx  vtkLevelSets.h
Algorithm/: EMLocalAlgorithm.txx  EMLocalAlgorithm_Initialization.txx  EMLocalAlgorithm_Print.txx  EMLocalRegistrationCostFunction.h  EMLocalShapeCostFunction.h  vtkDataDef.h  vtkImageEMGeneral.cxx  vtkImageEMGeneral.h  vtkImageEMGenericClass.cxx  vtkImageEMGenericClass.h  vtkImageEMLocalClass.cxx  vtkImageEMLocalClass.h  vtkImageEMLocalGenericClass.cxx  vtkImageEMLocalGenericClass.h  vtkImageEMLocalSegmenter.cxx  vtkImageEMLocalSegmenter.h  vtkImageEMLocalSuperClass.cxx  vtkImageEMLocalSuperClass.h  vtkTimeDef.h
CMake/: EM_BaseSources.cmake  EM_InstallTasks.cmake  EM_Slicer3_FindPackageSlicer.cmake  EM_Testing.cmake
CommandLineApplication/: CMakeLists.txt  EMSegmentAPIHelper.h  EMSegmentCommandLine.cxx  EMSegmentCommandLine.xml  EMSegmentCommandLineFct.cxx  EMSegmentCommandLineFct.h  IslandRemoval.cxx  IslandRemoval.xml
Qt/Logic/: CMakeLists.txt
(+106 files in other folders)
